--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 <!--  header-->
     <header class="header">
+        <a href="https://leonbets.com/">
         <img class="header__img" src="images/logotypes/leon.svg"/>
+        </a>
     </header>
     <div class="first-block__decor-top
                 animate-decoration
