--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>БК Леон - Скачай Android приложение</title>
+    <title>Android Bonus</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/icons/ball.svg"/>
 </head>
 <body>
 <!--  header-->
@@ -47,7 +48,7 @@
             </h1>
             <p class="first-block__text">
                 Faça o download da nossa App Android e ganhe <span class="first-block__text--mark">50 rodadas grátis</span> no Book of Dead.
-                Comece a divertir-se com a Twin também no seu telemóvel e ganhe dinheiro real sem riscos!
+                Comece a divertir-se com a Leon também no seu telemóvel e ganhe dinheiro real sem riscos!
             </p>
             <div class="first-block__footer">
                 <a class="first-block__button button" href="/app">
@@ -184,7 +185,7 @@
             </div>
             <div class="first-block__banner-hero
             first-block__banner-hero--mobile animate-hero">
-                <img src="images/1/main-mob.png" alt="man" width="100%">
+                <img src="images/1/main.png" alt="man" width="100%">
             </div>
             <div class="first-block__banner-hero
             first-block__banner-hero--desktop animate-hero animate-hero--desktop">
