--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
                 <div class="first-block__star">
                     <img src="images/icons/star.svg" alt="фрибет">
                 </div>
-                <span class="text-bold-14">50 rodadas grátis</span>
+                <span class="text-bold-14">50 free spins</span>
             </div>
-            <h1 class="first-block__title">App da Leon
-                para <span class="first-block__title--mark">Android</span>
+            <h1 class="first-block__title">Leon App for<span class="first-block__title--mark"> Android</span>
             </h1>
             <p class="first-block__text">
-                Faça o download da nossa App Android e ganhe <span class="first-block__text--mark">50 rodadas grátis</span> no Book of Dead.
-                Comece a divertir-se com a Leon também no seu telemóvel e ganhe dinheiro real sem riscos!
+                Download our app and get <span class="first-block__text--mark">50 free spins</span> in the Book of Dead. Start spinning the reels from your mobile and win real money risk-free!
             </p>
             <div class="first-block__footer">
                 <a class="first-block__button button" href="/app">
@@ -185,7 +183,7 @@
             </div>
             <div class="first-block__banner-hero
             first-block__banner-hero--mobile animate-hero">
-                <img src="images/1/main.png" alt="man" width="100%">
+                <img src="images/1/main-mob.png" alt="man" width="100%">
             </div>
             <div class="first-block__banner-hero
             first-block__banner-hero--desktop animate-hero animate-hero--desktop">
@@ -229,15 +227,15 @@
 
 <!--  second-block-->
     <div class="second-block block-2 block-flexible anima-item anim-no-hide">
-        <h2 class="second-block__title">A melhor experiência mobile de jogos de casino</h2>
+        <h2 class="second-block__title">The ultimate mobile gambling experience</h2>
         <ul class="second-block__list">
             <li class="second-block__item anim-item anima-show anim-no-hide anima-show-1">
                 <div class="second-block__item-image">
                     <img src="images/2/1.png" alt="1" height="100%">
                 </div>
                 <div class="second-block__content">
-                    <h3 class="second-block__item-title">Apostas desportivas</h3>
-                    <p  class="second-block__text">Aposte no futebol e em mais de 20 modalidades diferentes com as melhores odds.</p>
+                    <h3 class="second-block__item-title">Live Casino</h3>
+                    <p  class="second-block__text">Play Andar Bahar, Teen Patti, Lighting Roulette, and other games and hit the jackpot.</p>
                 </div>
             </li>
             <li class="second-block__item anim-item anima-show anim-no-hide anima-show-2">
@@ -245,8 +243,8 @@
                     <img src="images/2/2.png" alt="2" height="100%">
                 </div>
                 <div class="second-block__content">
-                    <h3 class="second-block__item-title">Slots & Casino ao vivo</h3>
-                    <p  class="second-block__text">Desfrute de uma ampla variedade de slots, assim como de jogos ao vivo com dealers profissionais dedicados.</p>
+                    <h3 class="second-block__item-title">Live Sports</h3>
+                    <p  class="second-block__text">Bet on Cricket, Kabaddi & Indian Premier League matches with the best live odds.</p>
                 </div>
             </li>
             <li class="second-block__item anim-item anima-show anim-no-hide anima-show-3">
@@ -254,8 +252,8 @@
                     <img src="images/2/3.png" alt="3" height="100%">
                 </div>
                 <div class="second-block__content">
-                    <h3 class="second-block__item-title">Ofertas Exclusivas</h3>
-                    <p  class="second-block__text">Junte-se aos nossos torneios regulares e entre em competição contra outros jogadores para ganhar mais dinheiro real.</p>
+                    <h3 class="second-block__item-title">Exclusive offers</h3>
+                    <p  class="second-block__text">Join our regular tournaments and compete against other players to win more real cash.</p>
                 </div>
             </li>
         </ul>
@@ -264,12 +262,10 @@
 <!--third-block-->
    <div class="third-block block-3 block-flexible ">
        <div class="third-block__content">
-       <div class="third-block__bonus">Bónus</div>
-       <h2 class="third-block__title">Reivindique as suas <span>50 rodadas</span> grátis agora mesmo</h2>
+       <div class="third-block__bonus">Bonus</div>
+       <h2 class="third-block__title">Claim your <span>50 free spins</span> now </h2>
        <p class="third-block__text">
-           Tenha acesso aos bónus exclusivos que estão disponíveis apenas na App.
-           Pode reivindicar as suas <span>50 rodadas</span> grátis no Book of Dead agora mesmo - para isso basta que faça o download da nossa aplicação móvel.
-           Não deixe escapar esta excelente oportunidade!
+           Get access to the exclusive bonuses that are only available in the app. You can already claim your <span>50 free spins</span> in the <span>Book of Dead</span> now – just download the app and enjoy!
        </p>
         <div class="third-block__footer anim-item">
             <a class="first-block__button button" href="/app">
@@ -289,7 +285,7 @@
 
 <!--fourth block-->
   <div class="fourth-block block-4 block-flexible anim-item anim-no-hide">
-      <h2 class="fourth-block__title">Como fazer:</h2>
+      <h2 class="fourth-block__title">Here’s how:</h2>
       <ul class="fourth-block__list">
           <li class="fourth-block__item anim-item anima-show-early anim-no-hide anima-show-early-1">
               <div class="fourth-block__image-container">
@@ -298,8 +294,8 @@
                   </div>
                   <p  class="fourth-block__image-number">01<span>.</span></p>
               </div>
-              <h3 class="fourth-block__item-title">Ativar a campanha</h3>
-              <p  class="fourth-block__item-text">Depois de abrir a App, vá até à página de bónus e clique em "Participar".</p>
+              <h3 class="fourth-block__item-title">Activate campaign</h3>
+              <p  class="fourth-block__item-text">Once you open the app, go to the bonus page and click <span class="fourth-block__bold">«Opt-in»</span>.</p>
           </li>
           <li class="fourth-block__item anim-item anima-show-early anim-no-hide anima-show-early-2">
               <div class="fourth-block__image-container">
@@ -308,8 +304,8 @@
                   </div>
                   <p  class="fourth-block__image-number">02<span>.</span></p>
               </div>
-              <h3 class="fourth-block__item-title">Aproveite as 50 rodadas grátis</h3>
-              <p  class="fourth-block__item-text">Jogue o slot Book of Dead da Play 'n GO e comece a ganhar.</p>
+              <h3 class="fourth-block__item-title">Use 50 free spins</h3>
+              <p  class="fourth-block__item-text">Spin the reels of the <span class="fourth-block__bold">Book of Dead</span> from <span class="fourth-block__bold">Play ‘n GO </span>and start winning.</p>
           </li>
           <li class="fourth-block__item anim-item anima-show-early anim-no-hide anima-show-early-3">
               <div class="fourth-block__image-container">
@@ -318,14 +314,14 @@
                   </div>
                   <p  class="fourth-block__image-number">03<span>.</span></p>
               </div>
-              <h3 class="fourth-block__item-title">Levante os seus ganhos</h3>
-              <p  class="fourth-block__item-text">Aposte os seus ganhos dentro de 7 dias e depois já pode transferi-los para a conta principal.</p>
+              <h3 class="fourth-block__item-title">Withdraw the winnings</h3>
+              <p  class="fourth-block__item-text">Wager your winnings within <span class="fourth-block__bold">7 days</span> to withdraw them to the main account.</p>
           </li>
       </ul>
   </div>
 
  <footer class="footer block-footer anim-item">
-     <h2 class="footer__title">para Android agora mesmo</h2>
+     <h2 class="footer__title">Download the <span class="fourth-block__bold">Leon App</span> for <span class="fourth-block__bold">Android</span> now</h2>
      <div class="footer__apps-block">
          <a class="first-block__button button" href="/app">
                 <span class="button__image">
@@ -338,8 +334,17 @@
      <div class="footer__logo">
          <img src="images/logotypes/leon.svg"/>
      </div>
-     <p class="footer__label">© Leon Curacao N.V, 2007-<span id="currentYear" onload="showYear()"></span> <br>
-         Reg nbr 140186 - Address Schout Bij Nacht Doormanweg <br>40, Willemstad, Curacao</p>
+     <ul class="footer__list">
+         <li class="footer__item anim-resize">
+             <a href="https://tlgg.ru/Leonbets_bot">
+                 <img src="images/icons/telegram.svg" alt="telegram">
+             </a>
+         </li>
+     </ul>
+     <p class="footer__label">
+         © 2007-<span id="currentYear" onload="showYear()"></span> <br>
+         Leon Curacao N.V - Reg nbr 140186 - Address Schout Bij Nacht Doormanweg 40, Willemstad, Curacao
+     </p>
  </footer>
  <script src="script.js"> </script>
 </body>
